--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -69,7 +69,7 @@
 
 .jumbotron {
   text-align: center;
-  background: url('background.jpg') no-repeat center center;
+  background: asset-url("background.jpg") no-repeat center center;
   background-size: cover;
   color: #fff;
   font-family: 'Helvetica Neue' !important;
